Fixed: use scss calc() function to calculate

--- a/src/scss/styles/elements/_iframe.scss
+++ b/src/scss/styles/elements/_iframe.scss
@@ -38,13 +38,13 @@ $modifier-iframe-aspect-4x3: "\.is-aspect-4x3" !default;
 
 @mixin musubii-style-iframe-wrap-aspect-16x9() {
   &:before {
-    padding-top: 9 / 16 * 100%;
+    padding-top: calc(9 / 16 * 100%);
   }
 }
 
 @mixin musubii-style-iframe-wrap-aspect-4x3() {
   &:before {
-    padding-top: 3 / 4 * 100%;
+    padding-top: calc(3 / 4 * 100%);
   }
 }
 
